accelerated-domains: add kaiquan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51697,6 +51697,7 @@ server=/kaipanla.com/114.114.114.114
 server=/kaiqiancq.com/114.114.114.114
 server=/kaiqiu.cc/114.114.114.114
 server=/kaiqsz.com/114.114.114.114
+server=/kaiquan.com/114.114.114.114
 server=/kairui.tech/114.114.114.114
 server=/kairunjinshu.com/114.114.114.114
 server=/kaisacst.com/114.114.114.114
