--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73299,6 +73299,7 @@ server=/semgz.com/114.114.114.114
 server=/semi-casi.com/114.114.114.114
 server=/semi.design/114.114.114.114
 server=/semiconductorpower.com/114.114.114.114
+server=/semiconshop.com/114.114.114.114
 server=/semidata.info/114.114.114.114
 server=/semiee.com/114.114.114.114
 server=/semight.com/114.114.114.114
