accelerated-domains: add shwdir.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75462,6 +75462,7 @@ server=/shuziyoutian.com/114.114.114.114
 server=/shuziyuedong.com/114.114.114.114
 server=/shwbs.org/114.114.114.114
 server=/shwdbjgs.com/114.114.114.114
+server=/shwdir.com/114.114.114.114
 server=/shwebspace.com/114.114.114.114
 server=/shwexpo.com/114.114.114.114
 server=/shwhl.com/114.114.114.114
