--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15681,6 +15681,7 @@ server=/bm001.com/114.114.114.114
 server=/bm369.net/114.114.114.114
 server=/bm50ue2uwnj7.com/114.114.114.114
 server=/bm8.tv/114.114.114.114
+server=/bmbios.com/114.114.114.114
 server=/bmbn100.com/114.114.114.114
 server=/bmbqwater.com/114.114.114.114
 server=/bmc-medical.com/114.114.114.114
