accelerated-domains: add gtx-sh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35477,6 +35477,7 @@ server=/gttxidc.com/114.114.114.114
 server=/gtuanb.com/114.114.114.114
 server=/gtuu.com/114.114.114.114
 server=/gtx-mall.com/114.114.114.114
+server=/gtx-sh.com/114.114.114.114
 server=/gtxf.com/114.114.114.114
 server=/gtxh.com/114.114.114.114
 server=/gtxp2.com/114.114.114.114
