accelerated-domains: add walker-fan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85514,6 +85514,7 @@ server=/wali123.com/114.114.114.114
 server=/walibao.com/114.114.114.114
 server=/walimaker.com/114.114.114.114
 server=/walk-live.com/114.114.114.114
+server=/walker-fan.com/114.114.114.114
 server=/walkingpad.com/114.114.114.114
 server=/walknode.com/114.114.114.114
 server=/walkthechat.com/114.114.114.114
