accelerated-domains: add aoboor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11406,6 +11406,7 @@ server=/aoaob.com/114.114.114.114
 server=/aobacore.com/114.114.114.114
 server=/aobaishi.com/114.114.114.114
 server=/aobanghb.com/114.114.114.114
+server=/aoboor.com/114.114.114.114
 server=/aobosoft.com/114.114.114.114
 server=/aocde.com/114.114.114.114
 server=/aocdn.com/114.114.114.114
