--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75497,6 +75497,7 @@ server=/shxibeiquanshe.com/114.114.114.114
 server=/shxichina.com/114.114.114.114
 server=/shxil.com/114.114.114.114
 server=/shxincn.com/114.114.114.114
+server=/shxinping.net/114.114.114.114
 server=/shxjkjt.com/114.114.114.114
 server=/shxkyy.com/114.114.114.114
 server=/shxlkj.com/114.114.114.114
