--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83923,6 +83923,7 @@ server=/upst86.com/114.114.114.114
 server=/upsunet.com/114.114.114.114
 server=/uptom.com/114.114.114.114
 server=/uptougu.com/114.114.114.114
+server=/upu-opt.com/114.114.114.114
 server=/upupbug.com/114.114.114.114
 server=/upupmo.com/114.114.114.114
 server=/upupoo.com/114.114.114.114
