accelerated-domains: add gystars.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38271,6 +38271,7 @@ server=/gysou.com/114.114.114.114
 server=/gysq.org/114.114.114.114
 server=/gysrmyy.com/114.114.114.114
 server=/gystarch.com/114.114.114.114
+server=/gystars.com/114.114.114.114
 server=/gystatic.com/114.114.114.114
 server=/gystc.com/114.114.114.114
 server=/gysuces.com/114.114.114.114
