--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74716,6 +74716,7 @@ server=/shishangweilai413.com/114.114.114.114
 server=/shishenmegeng.com/114.114.114.114
 server=/shishifanyi.com/114.114.114.114
 server=/shishike.com/114.114.114.114
+server=/shiso9001.net/114.114.114.114
 server=/shisongya.com/114.114.114.114
 server=/shisukeji.com/114.114.114.114
 server=/shitac.com/114.114.114.114
