--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75162,6 +75162,7 @@ server=/shtw.cc/114.114.114.114
 server=/shtwjiebao.com/114.114.114.114
 server=/shtxcj.com/114.114.114.114
 server=/shty99.com/114.114.114.114
+server=/shtydic.com/114.114.114.114
 server=/shu-ju.net/114.114.114.114
 server=/shu163.com/114.114.114.114
 server=/shuaigeshe.com/114.114.114.114
