accelerated-domains: add hengshanpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40642,6 +40642,7 @@ server=/hengqikuaiji.com/114.114.114.114
 server=/hengqinmarathon.com/114.114.114.114
 server=/hengruisensor.com/114.114.114.114
 server=/hengshan01.com/114.114.114.114
+server=/hengshanpharm.com/114.114.114.114
 server=/hengshengpark.com/114.114.114.114
 server=/hengshuilaobaigan.net/114.114.114.114
 server=/hengshuiyake.com/114.114.114.114
