--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66197,6 +66197,7 @@ server=/pdsxww.com/114.114.114.114
 server=/pdszhtl.com/114.114.114.114
 server=/pdty123.com/114.114.114.114
 server=/pduoduo.vip/114.114.114.114
+server=/pdvc.com/114.114.114.114
 server=/pdvisa.com/114.114.114.114
 server=/pdxx.net/114.114.114.114
 server=/pdzls.com/114.114.114.114
