--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75123,6 +75123,7 @@ server=/shsjjh.com/114.114.114.114
 server=/shsjx.org/114.114.114.114
 server=/shskg.com/114.114.114.114
 server=/shskin.com/114.114.114.114
+server=/shsktower.com/114.114.114.114
 server=/shsoong-chingling.com/114.114.114.114
 server=/shsot.com/114.114.114.114
 server=/shspdq.com/114.114.114.114
