--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75140,6 +75140,7 @@ server=/shsyzn.online/114.114.114.114
 server=/shsz17.com/114.114.114.114
 server=/shszsoft.com/114.114.114.114
 server=/shtangchao.com/114.114.114.114
+server=/shtannet.com/114.114.114.114
 server=/shtazy.com/114.114.114.114
 server=/shtbi.com/114.114.114.114
 server=/shtdgj.com/114.114.114.114
