accelerated-domains: add pdie-expo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66178,6 +66178,7 @@ server=/pdgohome.com/114.114.114.114
 server=/pdgzf.com/114.114.114.114
 server=/pdhr.com/114.114.114.114
 server=/pdidc.com/114.114.114.114
+server=/pdie-expo.com/114.114.114.114
 server=/pdim.gs/114.114.114.114
 server=/pdivsvu.com/114.114.114.114
 server=/pdlnn.com/114.114.114.114
