--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73527,6 +73527,7 @@ server=/sfwxf.com/114.114.114.114
 server=/sfxd.cc/114.114.114.114
 server=/sfy-gmc.com/114.114.114.114
 server=/sfyb.com/114.114.114.114
+server=/sfybee.com/114.114.114.114
 server=/sfybuyi.com/114.114.114.114
 server=/sfydns.com/114.114.114.114
 server=/sfygroup.com/114.114.114.114
