--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12367,6 +12367,7 @@ server=/avicnews.com/114.114.114.114
 server=/avicsec.com/114.114.114.114
 server=/avicui.com/114.114.114.114
 server=/avidbird.com/114.114.114.114
+server=/avinex.com/114.114.114.114
 server=/avivaqueen.com/114.114.114.114
 server=/avjb.com/114.114.114.114
 server=/avl-hitec.com/114.114.114.114
