accelerated-domains: add platform-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66908,6 +66908,7 @@ server=/platein.net/114.114.114.114
 server=/plateno.cc/114.114.114.114
 server=/plateno.com/114.114.114.114
 server=/platenogroup.com/114.114.114.114
+server=/platform-cn.com/114.114.114.114
 server=/platinum-traveller.com/114.114.114.114
 server=/platinumchina.com/114.114.114.114
 server=/play-analytics.com/114.114.114.114
