--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73688,6 +73688,7 @@ server=/sh-xixuan.com/114.114.114.114
 server=/sh-yajia.com/114.114.114.114
 server=/sh-ybxhz.com/114.114.114.114
 server=/sh-yichen.com/114.114.114.114
+server=/sh-yuai.com/114.114.114.114
 server=/sh-yuy.com/114.114.114.114
 server=/sh-yzkj.com/114.114.114.114
 server=/sh-zbfm.com/114.114.114.114
