--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74112,6 +74112,7 @@ server=/shbetterway.com/114.114.114.114
 server=/shbg.org/114.114.114.114
 server=/shbicycle.com/114.114.114.114
 server=/shbike.com/114.114.114.114
+server=/shbio.com/114.114.114.114
 server=/shbiochip.com/114.114.114.114
 server=/shbizhen.com/114.114.114.114
 server=/shbj.com/114.114.114.114
