--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98456,6 +98456,7 @@ server=/zcfun.com/114.114.114.114
 server=/zcfy.cc/114.114.114.114
 server=/zcgou.com/114.114.114.114
 server=/zcgsfy.com/114.114.114.114
+server=/zcgsh.com/114.114.114.114
 server=/zchat.tech/114.114.114.114
 server=/zchb-water.net/114.114.114.114
 server=/zchbsb9.com/114.114.114.114
