--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33127,6 +33127,7 @@ server=/gardencn.com/114.114.114.114
 server=/garleden.com/114.114.114.114
 server=/garmuri.com/114.114.114.114
 server=/garnoc.com/114.114.114.114
+server=/garnor.com/114.114.114.114
 server=/garphy.com/114.114.114.114
 server=/garply.com/114.114.114.114
 server=/garyee.com/114.114.114.114
