--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75510,6 +75510,7 @@ server=/shxiaoran.com/114.114.114.114
 server=/shxibeiquanshe.com/114.114.114.114
 server=/shxichina.com/114.114.114.114
 server=/shxil.com/114.114.114.114
+server=/shxinbodi.com/114.114.114.114
 server=/shxincn.com/114.114.114.114
 server=/shxinping.net/114.114.114.114
 server=/shxjkjt.com/114.114.114.114
