accelerated-domains: add jimagroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48851,6 +48851,7 @@ server=/jilu.info/114.114.114.114
 server=/jiluchengshi.com/114.114.114.114
 server=/jiluzhe.net/114.114.114.114
 server=/jilvfaka.com/114.114.114.114
+server=/jimagroup.com/114.114.114.114
 server=/jimahui.com/114.114.114.114
 server=/jimakj.com/114.114.114.114
 server=/jimay.com/114.114.114.114
