--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19869,6 +19869,7 @@ server=/chinahtz.com/114.114.114.114
 server=/chinahuashan.com/114.114.114.114
 server=/chinahuben.com/114.114.114.114
 server=/chinahudong.com/114.114.114.114
+server=/chinahugong.com/114.114.114.114
 server=/chinahvacr.com/114.114.114.114
 server=/chinahw.net/114.114.114.114
 server=/chinahylq.com/114.114.114.114
