accelerated-domains: add kai-lun.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51658,6 +51658,7 @@ server=/kagirl.net/114.114.114.114
 server=/kah8.com/114.114.114.114
 server=/kahaozhushou.com/114.114.114.114
 server=/kai-asia-hk.com/114.114.114.114
+server=/kai-lun.net/114.114.114.114
 server=/kai-ying.com/114.114.114.114
 server=/kaiba315.com/114.114.114.114
 server=/kaibanglaw.com/114.114.114.114
