accelerated-domains: add shggzy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74493,6 +74493,7 @@ server=/shgaoxin.net/114.114.114.114
 server=/shgbit.com/114.114.114.114
 server=/shgbitcloud.com/114.114.114.114
 server=/shgci.com/114.114.114.114
+server=/shggzy.com/114.114.114.114
 server=/shgjj.com/114.114.114.114
 server=/shgjq.com/114.114.114.114
 server=/shgkh.com/114.114.114.114
