accelerated-domains: add sstlp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77519,6 +77519,7 @@ server=/sssyyy.com/114.114.114.114
 server=/sst-ic.com/114.114.114.114
 server=/sst-sd.com/114.114.114.114
 server=/sst-sz.com/114.114.114.114
+server=/sstlp.com/114.114.114.114
 server=/sswater.com/114.114.114.114
 server=/sswchina.com/114.114.114.114
 server=/sswl315.com/114.114.114.114
