--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16472,6 +16472,7 @@ server=/build9s.io/114.114.114.114
 server=/buildface.com/114.114.114.114
 server=/buildhr.com/114.114.114.114
 server=/buildjob.net/114.114.114.114
+server=/buildnewapp.com/114.114.114.114
 server=/buildreamstar.com/114.114.114.114
 server=/buildwaterexpo.com/114.114.114.114
 server=/bukamanhua.com/114.114.114.114
