accelerated-domains: add huafangdichan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42998,6 +42998,7 @@ server=/huaeda.com/114.114.114.114
 server=/huaer.cc/114.114.114.114
 server=/huaerzi.store/114.114.114.114
 server=/huafang.com/114.114.114.114
+server=/huafangdichan.com/114.114.114.114
 server=/huafangzhou.com/114.114.114.114
 server=/huafeimould.com/114.114.114.114
 server=/huafeng.com/114.114.114.114
