accelerated-domains: add mc-biolab.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58824,6 +58824,7 @@ server=/mbwxzx.hk/114.114.114.114
 server=/mbxt.net/114.114.114.114
 server=/mbysrobot.com/114.114.114.114
 server=/mbzhu.net/114.114.114.114
+server=/mc-biolab.com/114.114.114.114
 server=/mc-ccpit.com/114.114.114.114
 server=/mc-dj.com/114.114.114.114
 server=/mc-f.com/114.114.114.114
