--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17525,6 +17525,7 @@ server=/casicyber.com/114.114.114.114
 server=/caslandwood.com/114.114.114.114
 server=/caslease.com/114.114.114.114
 server=/casmita.com/114.114.114.114
+server=/casmn.com/114.114.114.114
 server=/casnb.com/114.114.114.114
 server=/casp.hk/114.114.114.114
 server=/casql.com/114.114.114.114
