--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25279,6 +25279,7 @@ server=/deepleaper.com/114.114.114.114
 server=/deeplearn.me/114.114.114.114
 server=/deepoon.com/114.114.114.114
 server=/deeprouter.org/114.114.114.114
+server=/deepseapioneer.com/114.114.114.114
 server=/deepseek.com/114.114.114.114
 server=/deepsheet.net/114.114.114.114
 server=/deeptechchina.com/114.114.114.114
