accelerated-domains: add dragonyq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27325,6 +27325,7 @@ server=/dragonspringwater.com/114.114.114.114
 server=/dragontrail.com/114.114.114.114
 server=/dragontsc.com/114.114.114.114
 server=/dragonwell-jdk.io/114.114.114.114
+server=/dragonyq.com/114.114.114.114
 server=/drakeet.com/114.114.114.114
 server=/dramx.com/114.114.114.114
 server=/drartisan.com/114.114.114.114
