accelerated-domains: add huashen-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43250,6 +43250,7 @@ server=/huashangcbbtv.com/114.114.114.114
 server=/huashangtop.com/114.114.114.114
 server=/huashanxin.com/114.114.114.114
 server=/huashen-edu.com/114.114.114.114
+server=/huashen-group.com/114.114.114.114
 server=/huasheng-automation.com/114.114.114.114
 server=/huasheng100.com/114.114.114.114
 server=/huashengchn.com/114.114.114.114
