accelerated-domains: add softrobottech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76796,6 +76796,7 @@ server=/softhead-citavi.com/114.114.114.114
 server=/softhome.cc/114.114.114.114
 server=/softjinzhou.com/114.114.114.114
 server=/softmall.net/114.114.114.114
+server=/softrobottech.com/114.114.114.114
 server=/softscdn.com/114.114.114.114
 server=/softtest.com/114.114.114.114
 server=/software.download.prss.microsoft.com/114.114.114.114
