accelerated-domains: add vicbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84671,6 +84671,7 @@ server=/viarmour.com/114.114.114.114
 server=/vibit.cc/114.114.114.114
 server=/vibrou.com/114.114.114.114
 server=/vic18.com/114.114.114.114
+server=/vicbio.com/114.114.114.114
 server=/vicchen.me/114.114.114.114
 server=/vichc.com/114.114.114.114
 server=/vicigaming.com/114.114.114.114
