--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11216,6 +11216,7 @@ server=/anneijun.com/114.114.114.114
 server=/annelhair.com/114.114.114.114
 server=/annhe.net/114.114.114.114
 server=/anniekids.net/114.114.114.114
+server=/annoron.com/114.114.114.114
 server=/annto.com/114.114.114.114
 server=/annuoxun.com/114.114.114.114
 server=/annyhavland.com/114.114.114.114
