accelerated-domains: add bbef-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13562,6 +13562,7 @@ server=/bbdj.com/114.114.114.114
 server=/bbdservice.com/114.114.114.114
 server=/bbdup.com/114.114.114.114
 server=/bbecpsc.com/114.114.114.114
+server=/bbef-tech.com/114.114.114.114
 server=/bbef.com/114.114.114.114
 server=/bbeshop.com/114.114.114.114
 server=/bbfoxgame.com/114.114.114.114
