--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14801,6 +14801,7 @@ server=/bioktech.com/114.114.114.114
 server=/biolab.xyz/114.114.114.114
 server=/bioligo.com/114.114.114.114
 server=/biolihe.com/114.114.114.114
+server=/biominhai.com/114.114.114.114
 server=/bionav.cc/114.114.114.114
 server=/bioon.com/114.114.114.114
 server=/bioon.net/114.114.114.114
