accelerated-domains: add gxcro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36323,6 +36323,7 @@ server=/gxcrcw.com/114.114.114.114
 server=/gxcrh.net/114.114.114.114
 server=/gxcrhj.com/114.114.114.114
 server=/gxcrjm.com/114.114.114.114
+server=/gxcro.com/114.114.114.114
 server=/gxcrzxgs.com/114.114.114.114
 server=/gxcschem.com/114.114.114.114
 server=/gxcscm.com/114.114.114.114
