accelerated-domains: add sinopharmdbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75953,6 +75953,7 @@ server=/sinopecnews.com/114.114.114.114
 server=/sinopecsales.com/114.114.114.114
 server=/sinopecsenmeifj.com/114.114.114.114
 server=/sinopharm.com/114.114.114.114
+server=/sinopharmdbj.com/114.114.114.114
 server=/sinopharmholding.com/114.114.114.114
 server=/sinopharmhospital.com/114.114.114.114
 server=/sinopharmintl.com/114.114.114.114
