--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76509,6 +76509,7 @@ server=/sme8718.com/114.114.114.114
 server=/smebb.com/114.114.114.114
 server=/smec-cn.com/114.114.114.114
 server=/smeia.net/114.114.114.114
+server=/smeiic.com/114.114.114.114
 server=/smemo.info/114.114.114.114
 server=/smetumen.com/114.114.114.114
 server=/smf-lux1997.com/114.114.114.114
