--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82429,6 +82429,7 @@ server=/tsinghuaicwx.com/114.114.114.114
 server=/tsinghuajournals.com/114.114.114.114
 server=/tsinghuan.com/114.114.114.114
 server=/tsinghuawoman.com/114.114.114.114
+server=/tsinghydrogen.com/114.114.114.114
 server=/tsingj.com/114.114.114.114
 server=/tsingmicro.com/114.114.114.114
 server=/tsingming.com/114.114.114.114
