--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19501,6 +19501,7 @@ server=/china-key.com/114.114.114.114
 server=/china-kids-expo.com/114.114.114.114
 server=/china-kids-fair.com/114.114.114.114
 server=/china-knobs.com/114.114.114.114
+server=/china-lantu.com/114.114.114.114
 server=/china-latv.com/114.114.114.114
 server=/china-lawoffice.com/114.114.114.114
 server=/china-led.net/114.114.114.114
