accelerated-domains: add hxnk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44192,6 +44192,7 @@ server=/hxm5.com/114.114.114.114
 server=/hxmeishi.com/114.114.114.114
 server=/hxmlyy.com/114.114.114.114
 server=/hxnews.com/114.114.114.114
+server=/hxnk.com/114.114.114.114
 server=/hxny.com/114.114.114.114
 server=/hxnygx.com/114.114.114.114
 server=/hxpdd.com/114.114.114.114
