--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76323,6 +76323,7 @@ server=/skynicecity.com/114.114.114.114
 server=/skynj.com/114.114.114.114
 server=/skype-china.net/114.114.114.114
 server=/skypuretech.com/114.114.114.114
+server=/skyrelay-ic.com/114.114.114.114
 server=/skyrichpower.com/114.114.114.114
 server=/skyrivers.org/114.114.114.114
 server=/skyrj.com/114.114.114.114
