accelerated-domains: add irc-risk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46748,6 +46748,7 @@ server=/iranmahanair.com/114.114.114.114
 server=/iranshao.com/114.114.114.114
 server=/iraoping.com/114.114.114.114
 server=/irbsh.com/114.114.114.114
+server=/irc-risk.com/114.114.114.114
 server=/ircmnr.com/114.114.114.114
 server=/ireader.com/114.114.114.114
 server=/ireader.live/114.114.114.114
