--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15123,6 +15123,7 @@ server=/bjdxzxy.com/114.114.114.114
 server=/bjeasycom.com/114.114.114.114
 server=/bjecutuning.com/114.114.114.114
 server=/bjef.com/114.114.114.114
+server=/bjei.com/114.114.114.114
 server=/bjent.org/114.114.114.114
 server=/bjepark.com/114.114.114.114
 server=/bjesg.com/114.114.114.114
