--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17106,6 +17106,7 @@ server=/cadzj.com/114.114.114.114
 server=/cadzxw.com/114.114.114.114
 server=/caecc.com/114.114.114.114
 server=/caeete.net/114.114.114.114
+server=/caes.store/114.114.114.114
 server=/caexpo.com/114.114.114.114
 server=/caexpo.org/114.114.114.114
 server=/cafachine.com/114.114.114.114
