--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21583,6 +21583,7 @@ server=/cn-food.net/114.114.114.114
 server=/cn-healthcare.com/114.114.114.114
 server=/cn-healthclass.com/114.114.114.114
 server=/cn-huar.com/114.114.114.114
+server=/cn-immunotech.com/114.114.114.114
 server=/cn-lcd.com/114.114.114.114
 server=/cn-lingte.com/114.114.114.114
 server=/cn-mingda.com/114.114.114.114
