accelerated-domains: add dmmaterial.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26569,6 +26569,7 @@ server=/dmjuups.com/114.114.114.114
 server=/dmjvip.com/114.114.114.114
 server=/dmlei.com/114.114.114.114
 server=/dmm.ink/114.114.114.114
+server=/dmmaterial.com/114.114.114.114
 server=/dmooo.com/114.114.114.114
 server=/dmpans.com/114.114.114.114
 server=/dmpdmp.com/114.114.114.114
