accelerated-domains: add gaopin.tech

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33090,6 +33090,7 @@ server=/gaomon.net/114.114.114.114
 server=/gaopaiwood.com/114.114.114.114
 server=/gaopeng.com/114.114.114.114
 server=/gaopi.net/114.114.114.114
+server=/gaopin.tech/114.114.114.114
 server=/gaopinimages.com/114.114.114.114
 server=/gaopost.com/114.114.114.114
 server=/gaoqingdianshi.com/114.114.114.114
