--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98959,6 +98959,7 @@ server=/zgrdnews.com/114.114.114.114
 server=/zgrlm.com/114.114.114.114
 server=/zgrmw.com/114.114.114.114
 server=/zgruisai.com/114.114.114.114
+server=/zgrzbj.com/114.114.114.114
 server=/zgsclp.com/114.114.114.114
 server=/zgsd.net/114.114.114.114
 server=/zgserver.com/114.114.114.114
