accelerated-domains: add huataiyc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43292,6 +43292,7 @@ server=/huasyun.com/114.114.114.114
 server=/huatai-elec.com/114.114.114.114
 server=/huatai-pb.com/114.114.114.114
 server=/huatai1993.com/114.114.114.114
+server=/huataiyc.com/114.114.114.114
 server=/huatan365.com/114.114.114.114
 server=/huategas.com/114.114.114.114
 server=/huatengsci.com/114.114.114.114
