--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84700,6 +84700,7 @@ server=/vicp.fun/114.114.114.114
 server=/vicp.io/114.114.114.114
 server=/vicp.net/114.114.114.114
 server=/vicpalm.com/114.114.114.114
+server=/vicpv.com/114.114.114.114
 server=/vicrab.com/114.114.114.114
 server=/vicsdf.com/114.114.114.114
 server=/vicsz.com/114.114.114.114
