accelerated-domains: add bjjnrl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15207,6 +15207,7 @@ server=/bjjk66.com/114.114.114.114
 server=/bjjkglxh.org/114.114.114.114
 server=/bjjkw.net/114.114.114.114
 server=/bjjmzh.com/114.114.114.114
+server=/bjjnrl.com/114.114.114.114
 server=/bjjnzf.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
 server=/bjjsj.com/114.114.114.114
