accelerated-domains: add horibaprecision.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42352,6 +42352,7 @@ server=/horan.cc/114.114.114.114
 server=/horchips.com/114.114.114.114
 server=/hori-gz.com/114.114.114.114
 server=/hori3d.com/114.114.114.114
+server=/horibaprecision.com/114.114.114.114
 server=/horigames.com/114.114.114.114
 server=/horion.com/114.114.114.114
 server=/horionsw.com/114.114.114.114
