--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44355,6 +44355,7 @@ server=/hypergryph.net/114.114.114.114
 server=/hypers.com/114.114.114.114
 server=/hypersilicon.com/114.114.114.114
 server=/hypersnap.net/114.114.114.114
+server=/hyperstrong.com/114.114.114.114
 server=/hyphencargo.com/114.114.114.114
 server=/hypnotherapyforeverybody.com/114.114.114.114
 server=/hyppmm.com/114.114.114.114
