--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82439,6 +82439,7 @@ server=/tsichuan.com/114.114.114.114
 server=/tsing-jn.com/114.114.114.114
 server=/tsinghua-getinfo.com/114.114.114.114
 server=/tsinghua-sz.org/114.114.114.114
+server=/tsinghua-vc.com/114.114.114.114
 server=/tsinghuaic.com/114.114.114.114
 server=/tsinghuaicwx.com/114.114.114.114
 server=/tsinghuajournals.com/114.114.114.114
