--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64996,6 +64996,7 @@ server=/omooo.net/114.114.114.114
 server=/omos88.com/114.114.114.114
 server=/omowork.com/114.114.114.114
 server=/ompchina.net/114.114.114.114
+server=/omronmed.com/114.114.114.114
 server=/oms-elevator.com/114.114.114.114
 server=/omsheji.com/114.114.114.114
 server=/omsmy.com/114.114.114.114
