--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15020,6 +15020,7 @@ server=/bj-hzzs.com/114.114.114.114
 server=/bj-ipcf.org/114.114.114.114
 server=/bj-jinsly.com/114.114.114.114
 server=/bj-kpn.com/114.114.114.114
+server=/bj-px.com/114.114.114.114
 server=/bj-ranqi.com/114.114.114.114
 server=/bj-sea.com/114.114.114.114
 server=/bj-shouqi.com/114.114.114.114
