accelerated-domains: add bjclover.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15088,6 +15088,7 @@ server=/bjchun.com/114.114.114.114
 server=/bjchunxin.com/114.114.114.114
 server=/bjcjl.net/114.114.114.114
 server=/bjckkj.com/114.114.114.114
+server=/bjclover.com/114.114.114.114
 server=/bjcls.net/114.114.114.114
 server=/bjcma.com/114.114.114.114
 server=/bjcoco.com/114.114.114.114
