accelerated-domains: add bucg6.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16441,6 +16441,7 @@ server=/bubuyouqian.com/114.114.114.114
 server=/bubuzheng.com/114.114.114.114
 server=/bubuzou.com/114.114.114.114
 server=/bucg.com/114.114.114.114
+server=/bucg6.com/114.114.114.114
 server=/buchina.net/114.114.114.114
 server=/buckydrop.com/114.114.114.114
 server=/bucuo100.com/114.114.114.114
