accelerated-domains: add jyseeds.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51489,6 +51489,7 @@ server=/jys6z.com/114.114.114.114
 server=/jysbcj.com/114.114.114.114
 server=/jysd.com/114.114.114.114
 server=/jysedu.com/114.114.114.114
+server=/jyseeds.com/114.114.114.114
 server=/jyshare.com/114.114.114.114
 server=/jyshoubao.com/114.114.114.114
 server=/jyskuaiji.com/114.114.114.114
