accelerated-domains: add shouyaoholding.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75036,6 +75036,7 @@ server=/shouxi.net/114.114.114.114
 server=/shouxieti.com/114.114.114.114
 server=/shouxintec.com/114.114.114.114
 server=/shouyao.com/114.114.114.114
+server=/shouyaoholding.com/114.114.114.114
 server=/shouye-wang.com/114.114.114.114
 server=/shouyhui.com/114.114.114.114
 server=/shouyihuo.com/114.114.114.114
