--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81028,6 +81028,7 @@ server=/tiantaichina.com/114.114.114.114
 server=/tiantailaw.com/114.114.114.114
 server=/tiantaishebei.com/114.114.114.114
 server=/tiantaivideo.com/114.114.114.114
+server=/tiantanbio.com/114.114.114.114
 server=/tiantang100.com/114.114.114.114
 server=/tiantang6.com/114.114.114.114
 server=/tiantangnian.com/114.114.114.114
