--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15375,6 +15375,7 @@ server=/bjtonet.com/114.114.114.114
 server=/bjtonghui.com/114.114.114.114
 server=/bjtongjian.com/114.114.114.114
 server=/bjtopli.com/114.114.114.114
+server=/bjtqcy.com/114.114.114.114
 server=/bjtth.org/114.114.114.114
 server=/bjttsf.com/114.114.114.114
 server=/bjtvnews.com/114.114.114.114
