--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15383,6 +15383,7 @@ server=/bjtyhj.com/114.114.114.114
 server=/bjtyzh.org/114.114.114.114
 server=/bjtzzg.com/114.114.114.114
 server=/bju-flo.com/114.114.114.114
+server=/bjucd.com/114.114.114.114
 server=/bjufida.com/114.114.114.114
 server=/bjun.tech/114.114.114.114
 server=/bjunionstar.net/114.114.114.114
