accelerated-domains: add bolken.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15916,6 +15916,7 @@ server=/boliboshi.com/114.114.114.114
 server=/bolin1688.com/114.114.114.114
 server=/boling04.com/114.114.114.114
 server=/bolink.club/114.114.114.114
+server=/bolken.com/114.114.114.114
 server=/bolo.me/114.114.114.114
 server=/bolo.video/114.114.114.114
 server=/bolongxm.com/114.114.114.114
