accelerated-domains: add hirain.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41296,6 +41296,7 @@ server=/hipiao.com/114.114.114.114
 server=/hippoanimation.com/114.114.114.114
 server=/hippter.com/114.114.114.114
 server=/hipu.com/114.114.114.114
+server=/hirain.com/114.114.114.114
 server=/hirata-cn.com/114.114.114.114
 server=/hirata-hts.com/114.114.114.114
 server=/hirede.com/114.114.114.114
