--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80923,6 +80923,7 @@ server=/tianfuhui.xin/114.114.114.114
 server=/tianfupic.com/114.114.114.114
 server=/tianfusoftwarepark.com/114.114.114.114
 server=/tiangaicha.com/114.114.114.114
+server=/tiangang.com/114.114.114.114
 server=/tiangesoft.com/114.114.114.114
 server=/tiangou.xyz/114.114.114.114
 server=/tianhai.info/114.114.114.114
