accelerated-domains: add newlongbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62610,6 +62610,7 @@ server=/newlesson.com/114.114.114.114
 server=/newlifex.com/114.114.114.114
 server=/newlink.com/114.114.114.114
 server=/newlixon.com/114.114.114.114
+server=/newlongbj.com/114.114.114.114
 server=/newmaker.com/114.114.114.114
 server=/newman.mobi/114.114.114.114
 server=/newmargin.com/114.114.114.114
