--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14785,6 +14785,7 @@ server=/bio4p.com/114.114.114.114
 server=/biobiopha.com/114.114.114.114
 server=/biobw.org/114.114.114.114
 server=/biocellcharger.com/114.114.114.114
+server=/bioceltech.com/114.114.114.114
 server=/biochemsafebuy.com/114.114.114.114
 server=/biocloud.net/114.114.114.114
 server=/biocome.com/114.114.114.114
