accelerated-domains: add holmesbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42079,6 +42079,7 @@ server=/hollysource.com/114.114.114.114
 server=/hollysys.com/114.114.114.114
 server=/hollyuc.com/114.114.114.114
 server=/hollywant.com/114.114.114.114
+server=/holmesbio.com/114.114.114.114
 server=/holmesian.org/114.114.114.114
 server=/holoalpha.com/114.114.114.114
 server=/holsauto.com/114.114.114.114
