--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44154,6 +44154,7 @@ server=/hxbdxled.com/114.114.114.114
 server=/hxbsth.com/114.114.114.114
 server=/hxbus.net/114.114.114.114
 server=/hxc-power.com/114.114.114.114
+server=/hxccc.org/114.114.114.114
 server=/hxcd.net/114.114.114.114
 server=/hxcdn.net/114.114.114.114
 server=/hxchem.net/114.114.114.114
