--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75026,6 +75026,7 @@ server=/shoujitouping.com/114.114.114.114
 server=/shoujiwan.com/114.114.114.114
 server=/shoujixs.net/114.114.114.114
 server=/shoujixs.org/114.114.114.114
+server=/shoukaigufen.com/114.114.114.114
 server=/shoukala.com/114.114.114.114
 server=/shoukangyiyuan.com/114.114.114.114
 server=/shoulian.org/114.114.114.114
