accelerated-domains: add pengpailaw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66335,6 +66335,7 @@ server=/pengke.com/114.114.114.114
 server=/penglaiu.com/114.114.114.114
 server=/penglei.name/114.114.114.114
 server=/pengliao.com/114.114.114.114
+server=/pengpailaw.com/114.114.114.114
 server=/pengpeng.com/114.114.114.114
 server=/pengqi.club/114.114.114.114
 server=/pengqian.win/114.114.114.114
