--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11935,6 +11935,7 @@ server=/artpro.com/114.114.114.114
 server=/artpro.vip/114.114.114.114
 server=/artproglobal.com/114.114.114.114
 server=/artrade.com/114.114.114.114
+server=/artrobot.com/114.114.114.114
 server=/artron.net/114.114.114.114
 server=/artronartdata.com/114.114.114.114
 server=/artronimages.com/114.114.114.114
