accelerated-domains: add cne-om.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21816,6 +21816,7 @@ server=/cndy.org/114.114.114.114
 server=/cndzq.com/114.114.114.114
 server=/cndzys.com/114.114.114.114
 server=/cne-motor.com/114.114.114.114
+server=/cne-om.com/114.114.114.114
 server=/cne.com/114.114.114.114
 server=/cnean.com/114.114.114.114
 server=/cnec-tj.com/114.114.114.114
