--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49793,6 +49793,7 @@ server=/jlaod.com/114.114.114.114
 server=/jlaoj.com/114.114.114.114
 server=/jlaqjdjt.com/114.114.114.114
 server=/jlbhtc.com/114.114.114.114
+server=/jlbjcs.com/114.114.114.114
 server=/jlbkjt.com/114.114.114.114
 server=/jlbtrip.com/114.114.114.114
 server=/jlc-3dp.com/114.114.114.114
