accelerated-domains: add xdgj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89776,6 +89776,7 @@ server=/xdfpr.com/114.114.114.114
 server=/xdfsjj.com/114.114.114.114
 server=/xdgalaxy.com/114.114.114.114
 server=/xdggd.com/114.114.114.114
+server=/xdgj.com/114.114.114.114
 server=/xdglt.com/114.114.114.114
 server=/xdgogogo.com/114.114.114.114
 server=/xdhcn.com/114.114.114.114
