accelerated-domains: add bj-brother.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15012,6 +15012,7 @@ server=/bizsofts.com/114.114.114.114
 server=/bizvane.com/114.114.114.114
 server=/bj-big.com/114.114.114.114
 server=/bj-bpsc.com/114.114.114.114
+server=/bj-brother.com/114.114.114.114
 server=/bj-brsf.com/114.114.114.114
 server=/bj-bts.com/114.114.114.114
 server=/bj-byjz.com/114.114.114.114
