accelerated-domains: add lepumedical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54958,6 +54958,7 @@ server=/lepalacegt.com/114.114.114.114
 server=/lepanshoping.com/114.114.114.114
 server=/lepiaoyun.com/114.114.114.114
 server=/leptv.com/114.114.114.114
+server=/lepumedical.com/114.114.114.114
 server=/leqi.us/114.114.114.114
 server=/leqian.com/114.114.114.114
 server=/leqiaobh.com/114.114.114.114
