accelerated-domains: add puxindesign.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67738,6 +67738,7 @@ server=/puusa.net/114.114.114.114
 server=/puwenlong.com/114.114.114.114
 server=/puworld.com/114.114.114.114
 server=/puxiang.com/114.114.114.114
+server=/puxindesign.com/114.114.114.114
 server=/puxun.co/114.114.114.114
 server=/puxunkej.com/114.114.114.114
 server=/puyideshiye.com/114.114.114.114
