accelerated-domains: add shouhuigroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75020,6 +75020,7 @@ server=/shougoumingbiao.com/114.114.114.114
 server=/shouhaoche.com/114.114.114.114
 server=/shouhoubang.com/114.114.114.114
 server=/shouhui.com/114.114.114.114
+server=/shouhuigroup.com/114.114.114.114
 server=/shouhuisoft.com/114.114.114.114
 server=/shouhuojiyun.com/114.114.114.114
 server=/shouhuola.com/114.114.114.114
