accelerated-domains: add solidstatelion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76931,6 +76931,7 @@ server=/soliao.com/114.114.114.114
 server=/solidigm-asdf.com/114.114.114.114
 server=/solidigm-zxcv.com/114.114.114.114
 server=/solidot.org/114.114.114.114
+server=/solidstatelion.com/114.114.114.114
 server=/soliner.com/114.114.114.114
 server=/solo-launcher.com/114.114.114.114
 server=/solochex.com/114.114.114.114
