accelerated-domains: add antibodychina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11287,6 +11287,7 @@ server=/antforecast.com/114.114.114.114
 server=/antfortune.com/114.114.114.114
 server=/antgroup.com/114.114.114.114
 server=/antibanads.com/114.114.114.114
+server=/antibodychina.com/114.114.114.114
 server=/anticheatexpert.com/114.114.114.114
 server=/antiquelearn.com/114.114.114.114
 server=/antiy.com/114.114.114.114
