--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56460,6 +56460,7 @@ server=/lmlc.com/114.114.114.114
 server=/lmlmvip.com/114.114.114.114
 server=/lmm8.com/114.114.114.114
 server=/lmmob.com/114.114.114.114
+server=/lmnano.com/114.114.114.114
 server=/lmnsaas.com/114.114.114.114
 server=/lmonkey.com/114.114.114.114
 server=/lmqt.com/114.114.114.114
