--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14134,6 +14134,7 @@ server=/beodesj.com/114.114.114.114
 server=/beony.com/114.114.114.114
 server=/beook.com/114.114.114.114
 server=/bepal.pro/114.114.114.114
+server=/bepurestandards.com/114.114.114.114
 server=/bequ6.com/114.114.114.114
 server=/bequ6.org/114.114.114.114
 server=/bequgew.com/114.114.114.114
