--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15148,6 +15148,7 @@ server=/bjfsk.xyz/114.114.114.114
 server=/bjfyw.org/114.114.114.114
 server=/bjgas.com/114.114.114.114
 server=/bjgcl.com/114.114.114.114
+server=/bjgfa.com/114.114.114.114
 server=/bjggk.com/114.114.114.114
 server=/bjgjtjk.com/114.114.114.114
 server=/bjglxf.com/114.114.114.114
