--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58628,6 +58628,7 @@ server=/mararun.com/114.114.114.114
 server=/marathonbm.com/114.114.114.114
 server=/marathonchangsha.com/114.114.114.114
 server=/marchinfo.com/114.114.114.114
+server=/marco-bj.com/114.114.114.114
 server=/marcopolochina.com/114.114.114.114
 server=/mariamoralesactriz.com/114.114.114.114
 server=/marine-dancer.com/114.114.114.114
