--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76942,6 +76942,7 @@ server=/solo-launcher.com/114.114.114.114
 server=/solochex.com/114.114.114.114
 server=/soloknight.xyz/114.114.114.114
 server=/solomath.com/114.114.114.114
+server=/solooncontrols.com/114.114.114.114
 server=/solosea.com/114.114.114.114
 server=/solotoon.com/114.114.114.114
 server=/solove.design/114.114.114.114
