--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82490,6 +82490,7 @@ server=/tsingpost.com/114.114.114.114
 server=/tsingshang.com/114.114.114.114
 server=/tsingtoo.com/114.114.114.114
 server=/tsingtuo.com/114.114.114.114
+server=/tsingyanresearch.com/114.114.114.114
 server=/tsj-js.com/114.114.114.114
 server=/tsj-tsy.com/114.114.114.114
 server=/tsjtsy.com/114.114.114.114
