--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91290,6 +91290,7 @@ server=/xinlanshengbc.com/114.114.114.114
 server=/xinle.com/114.114.114.114
 server=/xinle366.com/114.114.114.114
 server=/xinle668.com/114.114.114.114
+server=/xinleineng.com/114.114.114.114
 server=/xinleshiyiyuan.com/114.114.114.114
 server=/xinli001.cc/114.114.114.114
 server=/xinli001.com/114.114.114.114
