--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59855,6 +59855,7 @@ server=/midust.com/114.114.114.114
 server=/midway.run/114.114.114.114
 server=/mieco.net/114.114.114.114
 server=/miecod.com/114.114.114.114
+server=/mieevents.com/114.114.114.114
 server=/miemie.la/114.114.114.114
 server=/miercn.com/114.114.114.114
 server=/mieseng.com/114.114.114.114
