accelerated-domains: add betavolt.tech

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14248,6 +14248,7 @@ server=/betaidc.com/114.114.114.114
 server=/betamao.me/114.114.114.114
 server=/betaquantity.com/114.114.114.114
 server=/betasmart.tech/114.114.114.114
+server=/betavolt.tech/114.114.114.114
 server=/betawm.com/114.114.114.114
 server=/betazixun.com/114.114.114.114
 server=/betcctv.com/114.114.114.114
