--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22668,6 +22668,7 @@ server=/conslive.com/114.114.114.114
 server=/console-integration.cdnetworks.com/114.114.114.114
 server=/console.cdnetworks.com/114.114.114.114
 server=/constao.com/114.114.114.114
+server=/constgroup.com/114.114.114.114
 server=/consultingcy.com/114.114.114.114
 server=/containerpi.com/114.114.114.114
 server=/content4ads.com/114.114.114.114
