--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43317,6 +43317,7 @@ server=/huatai-pb.com/114.114.114.114
 server=/huatai1993.com/114.114.114.114
 server=/huataiyc.com/114.114.114.114
 server=/huatan365.com/114.114.114.114
+server=/huatec.com/114.114.114.114
 server=/huategas.com/114.114.114.114
 server=/huatengsci.com/114.114.114.114
 server=/huati.cc/114.114.114.114
