--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90389,6 +90389,7 @@ server=/xiaochixiang.com/114.114.114.114
 server=/xiaochuan010.com/114.114.114.114
 server=/xiaocifang.com/114.114.114.114
 server=/xiaocms.com/114.114.114.114
+server=/xiaocx.org/114.114.114.114
 server=/xiaodaijl.com/114.114.114.114
 server=/xiaodaka.net/114.114.114.114
 server=/xiaodanzi.com/114.114.114.114
