accelerated-domains: add zhuanyizhuanw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100272,6 +100272,7 @@ server=/zhuanyejun.com/114.114.114.114
 server=/zhuanyepeixun.com/114.114.114.114
 server=/zhuanyes.com/114.114.114.114
 server=/zhuanyezhidao.com/114.114.114.114
+server=/zhuanyizhuanw.com/114.114.114.114
 server=/zhuanyun.cc/114.114.114.114
 server=/zhuanyun123.com/114.114.114.114
 server=/zhuanzfx.com/114.114.114.114
