accelerated-domains: add youfengbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96252,6 +96252,7 @@ server=/youfangou.com/114.114.114.114
 server=/youfangzx.com/114.114.114.114
 server=/youfanx.com/114.114.114.114
 server=/youfen666.com/114.114.114.114
+server=/youfengbio.com/114.114.114.114
 server=/youfubao.vip/114.114.114.114
 server=/youfujc.com/114.114.114.114
 server=/youfunlab.com/114.114.114.114
