accelerated-domains: add bjc-ent.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15082,6 +15082,7 @@ server=/bjbxg8.com/114.114.114.114
 server=/bjbywx.com/114.114.114.114
 server=/bjbzc.com/114.114.114.114
 server=/bjbzszxy.com/114.114.114.114
+server=/bjc-ent.com/114.114.114.114
 server=/bjcae.com/114.114.114.114
 server=/bjcag.com/114.114.114.114
 server=/bjcancer.org/114.114.114.114
