accelerated-domains: add bjgyzs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15164,6 +15164,7 @@ server=/bjgxhy.com/114.114.114.114
 server=/bjgxs.com/114.114.114.114
 server=/bjgymq.com/114.114.114.114
 server=/bjgyzjw.com/114.114.114.114
+server=/bjgyzs.com/114.114.114.114
 server=/bjgzc.com/114.114.114.114
 server=/bjhaiguang.com/114.114.114.114
 server=/bjhdcp.com/114.114.114.114
