accelerated-domains: add panchinasports.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65869,6 +65869,7 @@ server=/panasonic-door.com/114.114.114.114
 server=/panasonicmall.com/114.114.114.114
 server=/panawincn.com/114.114.114.114
 server=/panbrake.com/114.114.114.114
+server=/panchinasports.com/114.114.114.114
 server=/panchuang.net/114.114.114.114
 server=/panda-home.com/114.114.114.114
 server=/panda-js-power.com/114.114.114.114
