--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34765,6 +34765,7 @@ server=/golden-book.com/114.114.114.114
 server=/golden-infor.com/114.114.114.114
 server=/golden3t.net/114.114.114.114
 server=/goldenad.net/114.114.114.114
+server=/goldenbeechina.com/114.114.114.114
 server=/goldengreengolf.com/114.114.114.114
 server=/goldenhighway-chem.com/114.114.114.114
 server=/goldenholiday.com/114.114.114.114
