--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49647,6 +49647,7 @@ server=/jjcclt.com/114.114.114.114
 server=/jjcdn.com/114.114.114.114
 server=/jjcoffetel.cc/114.114.114.114
 server=/jjcoffetels.com/114.114.114.114
+server=/jjcpe.com/114.114.114.114
 server=/jjcto.com/114.114.114.114
 server=/jjdede.com/114.114.114.114
 server=/jjdjk.com/114.114.114.114
