accelerated-domains: add guozhuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36024,6 +36024,7 @@ server=/guozhihua.net/114.114.114.114
 server=/guozhijun.com/114.114.114.114
 server=/guozhivip.com/114.114.114.114
 server=/guozhoutrade.com/114.114.114.114
+server=/guozhuan.com/114.114.114.114
 server=/guozi.org/114.114.114.114
 server=/guoziyx.com/114.114.114.114
 server=/gupang.com/114.114.114.114
