accelerated-domains: add rocar.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71358,6 +71358,7 @@ server=/robotplaces.com/114.114.114.114
 server=/roboxx.ltd/114.114.114.114
 server=/roc-cnc.com/114.114.114.114
 server=/rocaircraft.com/114.114.114.114
+server=/rocar.net/114.114.114.114
 server=/rochat.tech/114.114.114.114
 server=/rock-chips.com/114.114.114.114
 server=/rockbrain.net/114.114.114.114
