accelerated-domains: add tsingaero.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82485,6 +82485,7 @@ server=/tshock.cc/114.114.114.114
 server=/tshtech.com/114.114.114.114
 server=/tsichuan.com/114.114.114.114
 server=/tsing-jn.com/114.114.114.114
+server=/tsingaero.com/114.114.114.114
 server=/tsinghua-getinfo.com/114.114.114.114
 server=/tsinghua-sz.org/114.114.114.114
 server=/tsinghua-vc.com/114.114.114.114
