--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83967,6 +83967,7 @@ server=/uouo123.com/114.114.114.114
 server=/uovz.com/114.114.114.114
 server=/up-et.com/114.114.114.114
 server=/up-pharma-gx.com/114.114.114.114
+server=/up-pharma.com/114.114.114.114
 server=/up135.com/114.114.114.114
 server=/up360.com/114.114.114.114
 server=/up368.com/114.114.114.114
