--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86403,6 +86403,7 @@ server=/weclassroom.com/114.114.114.114
 server=/wecloud.io/114.114.114.114
 server=/wecloudx.com/114.114.114.114
 server=/wecom.work/114.114.114.114
+server=/wecomput.com/114.114.114.114
 server=/wecorretoradeseguros.com/114.114.114.114
 server=/wecrm.com/114.114.114.114
 server=/wecrm.net/114.114.114.114
