accelerated-domains: add bernouly.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14146,6 +14146,7 @@ server=/berens-china.com/114.114.114.114
 server=/berfen.com/114.114.114.114
 server=/berlinchan.com/114.114.114.114
 server=/berlinix.com/114.114.114.114
+server=/bernouly.com/114.114.114.114
 server=/berqin.com/114.114.114.114
 server=/berrydigi.com/114.114.114.114
 server=/berrygenomics.com/114.114.114.114
