--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15150,6 +15150,7 @@ server=/bjfriendshiphotel.com/114.114.114.114
 server=/bjfsali.com/114.114.114.114
 server=/bjfsk.xyz/114.114.114.114
 server=/bjfyw.org/114.114.114.114
+server=/bjfzst.com/114.114.114.114
 server=/bjgas.com/114.114.114.114
 server=/bjgcl.com/114.114.114.114
 server=/bjgfa.com/114.114.114.114
