accelerated-domains: add bjjiuhe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15218,6 +15218,7 @@ server=/bjjhhft.com/114.114.114.114
 server=/bjjhsw.com/114.114.114.114
 server=/bjjihui.com/114.114.114.114
 server=/bjjinl.com/114.114.114.114
+server=/bjjiuhe.com/114.114.114.114
 server=/bjjizhun.com/114.114.114.114
 server=/bjjk66.com/114.114.114.114
 server=/bjjkglxh.org/114.114.114.114
