accelerated-domains: add bvmc.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16654,6 +16654,7 @@ server=/bvfcdn.com/114.114.114.114
 server=/bvfcdn2.com/114.114.114.114
 server=/bvgv.com/114.114.114.114
 server=/bvimg.com/114.114.114.114
+server=/bvmc.cc/114.114.114.114
 server=/bvseo.com/114.114.114.114
 server=/bvubasnf.com/114.114.114.114
 server=/bvv7.com/114.114.114.114
