accelerated-domains: add bypbn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16797,6 +16797,7 @@ server=/bynonco.com/114.114.114.114
 server=/bynrnews.com/114.114.114.114
 server=/bynsyh.com/114.114.114.114
 server=/bypanghu.xyz/114.114.114.114
+server=/bypbn.com/114.114.114.114
 server=/bypos.net/114.114.114.114
 server=/byprxy.com/114.114.114.114
 server=/byqcxy.com/114.114.114.114
