accelerated-domains: add f-biology.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30163,6 +30163,7 @@ server=/ezwan.com/114.114.114.114
 server=/ezwanjia.com/114.114.114.114
 server=/ezzls.com/114.114.114.114
 server=/f-0.cc/114.114.114.114
+server=/f-biology.com/114.114.114.114
 server=/f-dou.com/114.114.114.114
 server=/f-insight.com/114.114.114.114
 server=/f-stack.org/114.114.114.114
