accelerated-domains: add sino-training.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75944,6 +75944,7 @@ server=/sino-manager.com/114.114.114.114
 server=/sino-rainbow.cc/114.114.114.114
 server=/sino-sfcc.com/114.114.114.114
 server=/sino-tcm.com/114.114.114.114
+server=/sino-training.com/114.114.114.114
 server=/sino-web.net/114.114.114.114
 server=/sinoagentsh.com/114.114.114.114
 server=/sinoancher.com/114.114.114.114
