--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81312,6 +81312,7 @@ server=/timetickme.com/114.114.114.114
 server=/timeticktick.com/114.114.114.114
 server=/timetw.com/114.114.114.114
 server=/timev.com/114.114.114.114
+server=/timewelder.com/114.114.114.114
 server=/timez.com/114.114.114.114
 server=/timi78.com/114.114.114.114
 server=/timing360.com/114.114.114.114
