--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86128,6 +86128,7 @@ server=/wave-optics.com/114.114.114.114
 server=/wavecn.com/114.114.114.114
 server=/wavedsp.tech/114.114.114.114
 server=/wavefront-optics.com/114.114.114.114
+server=/waveopt.com/114.114.114.114
 server=/waveshare.net/114.114.114.114
 server=/wavezones.com/114.114.114.114
 server=/wavideo.tv/114.114.114.114
