--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16461,6 +16461,7 @@ server=/bubuzou.com/114.114.114.114
 server=/bucg.com/114.114.114.114
 server=/bucg6.com/114.114.114.114
 server=/buchina.net/114.114.114.114
+server=/bucid.com/114.114.114.114
 server=/buckydrop.com/114.114.114.114
 server=/bucuo100.com/114.114.114.114
 server=/budao.com/114.114.114.114
