--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29768,6 +29768,7 @@ server=/etoplive.com/114.114.114.114
 server=/etoptour.com/114.114.114.114
 server=/etoubao.com/114.114.114.114
 server=/etoujie.com/114.114.114.114
+server=/etowncapital.com/114.114.114.114
 server=/etowz.com/114.114.114.114
 server=/etpass.com/114.114.114.114
 server=/etpowers.com/114.114.114.114
