accelerated-domains: add wehichina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86454,6 +86454,7 @@ server=/weharvest.com/114.114.114.114
 server=/wehefei.com/114.114.114.114
 server=/wehelpwin.com/114.114.114.114
 server=/weherepost.com/114.114.114.114
+server=/wehichina.com/114.114.114.114
 server=/wei-ben.com/114.114.114.114
 server=/wei-ze.com/114.114.114.114
 server=/wei2008.com/114.114.114.114
