--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14343,6 +14343,7 @@ server=/bgfl.net/114.114.114.114
 server=/bggd.com/114.114.114.114
 server=/bghgw.com/114.114.114.114
 server=/bghmj.com/114.114.114.114
+server=/bgi-graphene.com/114.114.114.114
 server=/bgi.com/114.114.114.114
 server=/bgic.com/114.114.114.114
 server=/bgici.com/114.114.114.114
