accelerated-domains: add greenwater.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35227,6 +35227,7 @@ server=/greenlandsc.com/114.114.114.114
 server=/greensince.com/114.114.114.114
 server=/greenswolf.com/114.114.114.114
 server=/greentomail.com/114.114.114.114
+server=/greenwater.cc/114.114.114.114
 server=/greenwaychina.org/114.114.114.114
 server=/greenwood-park.com/114.114.114.114
 server=/greenxf.com/114.114.114.114
