--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47369,6 +47369,7 @@ server=/iwhr.org/114.114.114.114
 server=/iwin10.net/114.114.114.114
 server=/iwingchina.com/114.114.114.114
 server=/iwiscloud.com/114.114.114.114
+server=/iwishwed.com/114.114.114.114
 server=/iwithu.net/114.114.114.114
 server=/iwjw.com/114.114.114.114
 server=/iwmmob.com/114.114.114.114
