--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64973,6 +64973,7 @@ server=/oktools.xyz/114.114.114.114
 server=/oktranslation.com/114.114.114.114
 server=/oktukids.com/114.114.114.114
 server=/okuer.com/114.114.114.114
+server=/okuma-byjc.com/114.114.114.114
 server=/okvnet.com/114.114.114.114
 server=/okweb.info/114.114.114.114
 server=/okwuyou.com/114.114.114.114
