--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15107,6 +15107,7 @@ server=/bjcoco.com/114.114.114.114
 server=/bjcomic.net/114.114.114.114
 server=/bjcomm.com/114.114.114.114
 server=/bjconrad.com/114.114.114.114
+server=/bjcontinent.com/114.114.114.114
 server=/bjcpjzhyxh.com/114.114.114.114
 server=/bjcsfx.com/114.114.114.114
 server=/bjcshy.com/114.114.114.114
