accelerated-domains: add asiet.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12039,6 +12039,7 @@ server=/asiaseiki.com/114.114.114.114
 server=/asiasolar.net/114.114.114.114
 server=/asiatelco.com/114.114.114.114
 server=/asiayun.com/114.114.114.114
+server=/asiet.net/114.114.114.114
 server=/asifadeaway.com/114.114.114.114
 server=/asilu.com/114.114.114.114
 server=/asim-emc.com/114.114.114.114
