--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15055,6 +15055,7 @@ server=/bj1777.com/114.114.114.114
 server=/bj17z.com/114.114.114.114
 server=/bj315.org/114.114.114.114
 server=/bj35.com/114.114.114.114
+server=/bj360.com/114.114.114.114
 server=/bj51.org/114.114.114.114
 server=/bj520.com/114.114.114.114
 server=/bj597.com/114.114.114.114
