--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15091,6 +15091,7 @@ server=/bjcae.com/114.114.114.114
 server=/bjcag.com/114.114.114.114
 server=/bjcancer.org/114.114.114.114
 server=/bjcankao.com/114.114.114.114
+server=/bjcapital.com/114.114.114.114
 server=/bjcathay.com/114.114.114.114
 server=/bjcdc.org/114.114.114.114
 server=/bjcdomain.com/114.114.114.114
