accelerated-domains: add cscec1b-bj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23399,6 +23399,7 @@ server=/cscan.co/114.114.114.114
 server=/cscatv.com/114.114.114.114
 server=/cscdf.org/114.114.114.114
 server=/cscec.com/114.114.114.114
+server=/cscec1b-bj.com/114.114.114.114
 server=/cscec1b.net/114.114.114.114
 server=/cscec7bhb.com/114.114.114.114
 server=/cscec81.com/114.114.114.114
