accelerated-domains: add jywmgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51555,6 +51555,7 @@ server=/jytrump.com/114.114.114.114
 server=/jytwp.com/114.114.114.114
 server=/jywanrun.com/114.114.114.114
 server=/jywlcm.com/114.114.114.114
+server=/jywmgs.com/114.114.114.114
 server=/jywxq.com/114.114.114.114
 server=/jyxdyzx.com/114.114.114.114
 server=/jyyun.com/114.114.114.114
