--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68312,6 +68312,7 @@ server=/qhcdn.com/114.114.114.114
 server=/qhch520.com/114.114.114.114
 server=/qhchcb.com/114.114.114.114
 server=/qhclass.com/114.114.114.114
+server=/qhcro.com/114.114.114.114
 server=/qhcswhh.com/114.114.114.114
 server=/qhd-marathon.com/114.114.114.114
 server=/qhd.net/114.114.114.114
