accelerated-domains: add wisbiom.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87787,6 +87787,7 @@ server=/wirelesschina-summit.com/114.114.114.114
 server=/wiremesh001.com/114.114.114.114
 server=/wiremeshforfilter.com/114.114.114.114
 server=/wirlesshare.com/114.114.114.114
+server=/wisbiom.com/114.114.114.114
 server=/wisburg.com/114.114.114.114
 server=/wisder.net/114.114.114.114
 server=/wisdoing.com/114.114.114.114
