--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72272,6 +72272,7 @@ server=/sanfinehospital.com/114.114.114.114
 server=/sanfo.com/114.114.114.114
 server=/sanfu.com/114.114.114.114
 server=/sang.pub/114.114.114.114
+server=/sangaopatent.com/114.114.114.114
 server=/sangerbio.com/114.114.114.114
 server=/sangfor.com/114.114.114.114
 server=/sangfor.net/114.114.114.114
