accelerated-domains: add sciecure.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72736,6 +72736,7 @@ server=/sci99.com/114.114.114.114
 server=/scichina.com/114.114.114.114
 server=/scicn.net/114.114.114.114
 server=/scidict.org/114.114.114.114
+server=/sciecure.com/114.114.114.114
 server=/sciencehr.net/114.114.114.114
 server=/sciengine.com/114.114.114.114
 server=/scientrans.com/114.114.114.114
