--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80955,6 +80955,7 @@ server=/tianbiao.net/114.114.114.114
 server=/tiancaixing.com/114.114.114.114
 server=/tiancaixing.net/114.114.114.114
 server=/tiancao360.com/114.114.114.114
+server=/tiancehang.com/114.114.114.114
 server=/tianchanggongjiao.com/114.114.114.114
 server=/tianche.net/114.114.114.114
 server=/tianchengas.com/114.114.114.114
