--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43078,6 +43078,7 @@ server=/huahuacaocao.com/114.114.114.114
 server=/huahuahua.net/114.114.114.114
 server=/huahuaka.com/114.114.114.114
 server=/huahuamaoyi.com/114.114.114.114
+server=/huahuan.com/114.114.114.114
 server=/huahuo.com/114.114.114.114
 server=/huai.gg/114.114.114.114
 server=/huaian.com/114.114.114.114
