accelerated-domains: add yuanqisenlin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97068,6 +97068,7 @@ server=/yuanqiao.net/114.114.114.114
 server=/yuanqiao.pw/114.114.114.114
 server=/yuanqilt.com/114.114.114.114
 server=/yuanqingsh.com/114.114.114.114
+server=/yuanqisenlin.com/114.114.114.114
 server=/yuanrenbang.com/114.114.114.114
 server=/yuanrengu.com/114.114.114.114
 server=/yuanrenxue.com/114.114.114.114
