--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100585,6 +100585,7 @@ server=/zhysdxl.com/114.114.114.114
 server=/zhysgagag.com/114.114.114.114
 server=/zhyymall.com/114.114.114.114
 server=/zhyyz.com/114.114.114.114
+server=/zhz.com/114.114.114.114
 server=/zhzf360.net/114.114.114.114
 server=/zhzh.xyz/114.114.114.114
 server=/zhzjw.net/114.114.114.114
