--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39274,6 +39274,7 @@ server=/hanqinghb.com/114.114.114.114
 server=/hanrunbt.com/114.114.114.114
 server=/hansaoxinxi.xyz/114.114.114.114
 server=/hanschen.site/114.114.114.114
+server=/hansenexpo.com/114.114.114.114
 server=/hansetile.com/114.114.114.114
 server=/hanshinkiki-xuzhou.com/114.114.114.114
 server=/hansholdings.com/114.114.114.114
