--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13284,6 +13284,7 @@ server=/bao21.com/114.114.114.114
 server=/bao265.com/114.114.114.114
 server=/bao315.com/114.114.114.114
 server=/bao369.com/114.114.114.114
+server=/baoanchina.com/114.114.114.114
 server=/baob123.com/114.114.114.114
 server=/baobanli.com/114.114.114.114
 server=/baobao001.com/114.114.114.114
