accelerated-domains: add besonchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14168,6 +14168,7 @@ server=/besget.com/114.114.114.114
 server=/beshtech.com/114.114.114.114
 server=/besile.com/114.114.114.114
 server=/besino.com/114.114.114.114
+server=/besonchina.com/114.114.114.114
 server=/bessystem.com/114.114.114.114
 server=/best-display.com/114.114.114.114
 server=/best-inc.com/114.114.114.114
