accelerated-domains: add bjzzcb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15511,6 +15511,7 @@ server=/bjzybaoan.com/114.114.114.114
 server=/bjzyca.com/114.114.114.114
 server=/bjzyrxgs.com/114.114.114.114
 server=/bjzysx.com/114.114.114.114
+server=/bjzzcb.com/114.114.114.114
 server=/bjzzdb.com/114.114.114.114
 server=/bjzzrx.com/114.114.114.114
 server=/bk-cdn.com/114.114.114.114
