--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21448,6 +21448,7 @@ server=/clyiyuan.com/114.114.114.114
 server=/clyric.com/114.114.114.114
 server=/clz.me/114.114.114.114
 server=/clzbl.com/114.114.114.114
+server=/clzd.com/114.114.114.114
 server=/clzd.fun/114.114.114.114
 server=/clzqcw.com/114.114.114.114
 server=/clzqm.com/114.114.114.114
