accelerated-domains: add composolder.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22644,6 +22644,7 @@ server=/complant.com/114.114.114.114
 server=/complexstudio.net/114.114.114.114
 server=/componentcn.com/114.114.114.114
 server=/componentschip.com/114.114.114.114
+server=/composolder.com/114.114.114.114
 server=/compoundsemiconductorchina.net/114.114.114.114
 server=/comprame.com/114.114.114.114
 server=/computeinit.com/114.114.114.114
