--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24392,6 +24392,7 @@ server=/dafang24.com/114.114.114.114
 server=/dafangtour.net/114.114.114.114
 server=/dafangya.com/114.114.114.114
 server=/dafanshu.com/114.114.114.114
+server=/dafaun.com/114.114.114.114
 server=/daffaite.com/114.114.114.114
 server=/dafork.com/114.114.114.114
 server=/dagangcheng.com/114.114.114.114
