accelerated-domains: add gracelaser.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35178,6 +35178,7 @@ server=/grablan.com/114.114.114.114
 server=/grabsun.com/114.114.114.114
 server=/grace2015.site/114.114.114.114
 server=/gracece.com/114.114.114.114
+server=/gracelaser.com/114.114.114.114
 server=/gracg.com/114.114.114.114
 server=/gradaimmi.com/114.114.114.114
 server=/gradgroup.com/114.114.114.114
