accelerated-domains: add biodx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14801,6 +14801,7 @@ server=/biocloud.net/114.114.114.114
 server=/biocome.com/114.114.114.114
 server=/biodiscover.com/114.114.114.114
 server=/biodiscover.net/114.114.114.114
+server=/biodx.com/114.114.114.114
 server=/biogo.net/114.114.114.114
 server=/biogot.com/114.114.114.114
 server=/biohf.com/114.114.114.114
