--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15167,6 +15167,7 @@ server=/bjgjtjk.com/114.114.114.114
 server=/bjglxf.com/114.114.114.114
 server=/bjglxt.com/114.114.114.114
 server=/bjgongteng.com/114.114.114.114
+server=/bjgoodwill.com/114.114.114.114
 server=/bjgujibaohu.com/114.114.114.114
 server=/bjgumu.com/114.114.114.114
 server=/bjguodu.com/114.114.114.114
