--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15243,6 +15243,7 @@ server=/bjjsyy.com/114.114.114.114
 server=/bjjszyyy.com/114.114.114.114
 server=/bjjtat.com/114.114.114.114
 server=/bjjubao.org/114.114.114.114
+server=/bjjzjt.com/114.114.114.114
 server=/bjjzsc.com/114.114.114.114
 server=/bjjzzpt.com/114.114.114.114
 server=/bjk30.com/114.114.114.114
