--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75826,6 +75826,7 @@ server=/silanggame.com/114.114.114.114
 server=/sildyn.com/114.114.114.114
 server=/sileadinc.com/114.114.114.114
 server=/silenceper.com/114.114.114.114
+server=/silexmicro.com/114.114.114.114
 server=/silianmall.com/114.114.114.114
 server=/siliaobaba.com/114.114.114.114
 server=/siliaokelijixie.com/114.114.114.114
