--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81351,6 +81351,7 @@ server=/timitime.com/114.114.114.114
 server=/timizy10.cc/114.114.114.114
 server=/timjx.com/114.114.114.114
 server=/timzuu.com/114.114.114.114
+server=/tinavi.com/114.114.114.114
 server=/tinetcloud.com/114.114.114.114
 server=/tinfinite.com/114.114.114.114
 server=/tinfo.com/114.114.114.114
