accelerated-domains: add qysbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70340,6 +70340,7 @@ server=/qyrb.com/114.114.114.114
 server=/qyrcbank.com/114.114.114.114
 server=/qyrx.cc/114.114.114.114
 server=/qys2y.com/114.114.114.114
+server=/qysbj.com/114.114.114.114
 server=/qysd.net/114.114.114.114
 server=/qysgf.com/114.114.114.114
 server=/qysport.com/114.114.114.114
