--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13933,6 +13933,7 @@ server=/beidouone.com/114.114.114.114
 server=/beidousafety.org/114.114.114.114
 server=/beidouxingxueche.com/114.114.114.114
 server=/beiduolab.com/114.114.114.114
+server=/beierbio.com/114.114.114.114
 server=/beierjin.net/114.114.114.114
 server=/beieryouxi.com/114.114.114.114
 server=/beifang.net/114.114.114.114
