accelerated-domains: add bioguoke.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14805,6 +14805,7 @@ server=/biodiscover.net/114.114.114.114
 server=/biodx.com/114.114.114.114
 server=/biogo.net/114.114.114.114
 server=/biogot.com/114.114.114.114
+server=/bioguoke.com/114.114.114.114
 server=/biohf.com/114.114.114.114
 server=/biohuaxing.com/114.114.114.114
 server=/biohyalux.com/114.114.114.114
