--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15046,6 +15046,7 @@ server=/bj-tencentclb.cloud/114.114.114.114
 server=/bj-tencentclb.com/114.114.114.114
 server=/bj-tongchuang.com/114.114.114.114
 server=/bj-tvart.com/114.114.114.114
+server=/bj-win.com/114.114.114.114
 server=/bj-wjh.com/114.114.114.114
 server=/bj-yt.com/114.114.114.114
 server=/bj-zkhb.com/114.114.114.114
