--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23225,6 +23225,7 @@ server=/cqzww.com/114.114.114.114
 server=/cqzyktqxxh.com/114.114.114.114
 server=/cqzyx.net/114.114.114.114
 server=/cqzz.net/114.114.114.114
+server=/cr-artisan.com/114.114.114.114
 server=/cr-expo.com/114.114.114.114
 server=/cr-newenergy.com/114.114.114.114
 server=/cr-nielsen.com/114.114.114.114
