--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31863,6 +31863,7 @@ server=/foodmate.net/114.114.114.114
 server=/foods1.com/114.114.114.114
 server=/foodsc.net/114.114.114.114
 server=/foodspace.net/114.114.114.114
+server=/foodspjm.com/114.114.114.114
 server=/foodszs.com/114.114.114.114
 server=/foodu14.com/114.114.114.114
 server=/foofish.net/114.114.114.114
