accelerated-domains: add founder.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31965,6 +31965,7 @@ server=/fototuan.com/114.114.114.114
 server=/foumeng.com/114.114.114.114
 server=/foumobile.com/114.114.114.114
 server=/founder.com/114.114.114.114
+server=/founder.net/114.114.114.114
 server=/founderbn.com/114.114.114.114
 server=/foundercentury.com/114.114.114.114
 server=/founderchip.com/114.114.114.114
