--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36023,6 +36023,7 @@ server=/guoweitong.com/114.114.114.114
 server=/guowenfh.com/114.114.114.114
 server=/guowuwushu.com/114.114.114.114
 server=/guoxiehao.com/114.114.114.114
+server=/guoxinbj.com/114.114.114.114
 server=/guoxinlanqiao.com/114.114.114.114
 server=/guoxinqh.com/114.114.114.114
 server=/guoxintek.com/114.114.114.114
