--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51187,6 +51187,7 @@ server=/juwanshe.com/114.114.114.114
 server=/juwed.com/114.114.114.114
 server=/juweixin.com/114.114.114.114
 server=/juxia.com/114.114.114.114
+server=/juxiang3d.com/114.114.114.114
 server=/juxieyun.com/114.114.114.114
 server=/juxin.tv/114.114.114.114
 server=/juxinguanjian.com/114.114.114.114
