accelerated-domains: add huahtc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43091,6 +43091,7 @@ server=/huahao.com/114.114.114.114
 server=/huahengsk.com/114.114.114.114
 server=/huahonggk.com/114.114.114.114
 server=/huahongjt.com/114.114.114.114
+server=/huahtc.com/114.114.114.114
 server=/huahua777.com/114.114.114.114
 server=/huahuacaocao.com/114.114.114.114
 server=/huahuahua.net/114.114.114.114
