--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14459,6 +14459,7 @@ server=/bhuvgy.com/114.114.114.114
 server=/bhwater.org/114.114.114.114
 server=/bhwzdnweys.com/114.114.114.114
 server=/bhxww.com/114.114.114.114
+server=/bhxz.net/114.114.114.114
 server=/bhybskq.com/114.114.114.114
 server=/bhyby.com/114.114.114.114
 server=/bhycjdyp.com/114.114.114.114
