--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17615,6 +17615,7 @@ server=/caua99.com/114.114.114.114
 server=/caufuyu.com/114.114.114.114
 server=/caup.net/114.114.114.114
 server=/caupd.com/114.114.114.114
+server=/caupdbj.com/114.114.114.114
 server=/cauvet.com/114.114.114.114
 server=/cav-ad.com/114.114.114.114
 server=/cavca.org/114.114.114.114
