accelerated-domains: add sf-auto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73571,6 +73571,7 @@ server=/seyaose.net/114.114.114.114
 server=/seyingwumei.com/114.114.114.114
 server=/seyuma-cn.com/114.114.114.114
 server=/sf-airlines.com/114.114.114.114
+server=/sf-auto.com/114.114.114.114
 server=/sf-bearing.com/114.114.114.114
 server=/sf-bsd.com/114.114.114.114
 server=/sf-card.com/114.114.114.114
