accelerated-domains: add triopen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82398,6 +82398,7 @@ server=/trimmoits.com/114.114.114.114
 server=/trinasolar.com/114.114.114.114
 server=/trinitigame.com/114.114.114.114
 server=/trioisobardev.com/114.114.114.114
+server=/triopen.com/114.114.114.114
 server=/trip169.com/114.114.114.114
 server=/trip8080.com/114.114.114.114
 server=/tripbaba.com/114.114.114.114
