--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13919,6 +13919,7 @@ server=/beibbs.com/114.114.114.114
 server=/beibei.com/114.114.114.114
 server=/beibeicdn.com/114.114.114.114
 server=/beibenkc.com/114.114.114.114
+server=/beicaiyuan.com/114.114.114.114
 server=/beicdn.com/114.114.114.114
 server=/beidahuang.net/114.114.114.114
 server=/beidasoft.com/114.114.114.114
