accelerated-domains: add bfscoc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14315,6 +14315,7 @@ server=/bfqh.com/114.114.114.114
 server=/bfqifu.com/114.114.114.114
 server=/bfqqsg.com/114.114.114.114
 server=/bfqtchayuan.com/114.114.114.114
+server=/bfscoc.com/114.114.114.114
 server=/bfsea.xyz/114.114.114.114
 server=/bfsmy.com/114.114.114.114
 server=/bfssj.com/114.114.114.114
