accelerated-domains: add chietom.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19434,6 +19434,7 @@ server=/chidowl.com/114.114.114.114
 server=/chidudata.com/114.114.114.114
 server=/chiefmore.com/114.114.114.114
 server=/chieftin.org/114.114.114.114
+server=/chietom.com/114.114.114.114
 server=/chifeikeji.com/114.114.114.114
 server=/chihe.so/114.114.114.114
 server=/chihealbio.com/114.114.114.114
