accelerated-domains: add hxssyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44290,6 +44290,7 @@ server=/hxseal.com/114.114.114.114
 server=/hxsec.com/114.114.114.114
 server=/hxsme.org/114.114.114.114
 server=/hxspjt.com/114.114.114.114
+server=/hxssyy.com/114.114.114.114
 server=/hxstrive.com/114.114.114.114
 server=/hxsts.com/114.114.114.114
 server=/hxt5.com/114.114.114.114
