--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52260,6 +52260,7 @@ server=/kedaotech.com/114.114.114.114
 server=/kede.com/114.114.114.114
 server=/kedefamen.com/114.114.114.114
 server=/kedi.cc/114.114.114.114
+server=/kedian-tech.com/114.114.114.114
 server=/kedianduo.com/114.114.114.114
 server=/kedou.com/114.114.114.114
 server=/keede.com/114.114.114.114
