accelerated-domains: add originwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65438,6 +65438,7 @@ server=/originlee.com/114.114.114.114
 server=/originoo.com/114.114.114.114
 server=/originpic.com/114.114.114.114
 server=/originsilicon.com/114.114.114.114
+server=/originwater.com/114.114.114.114
 server=/origloria.com/114.114.114.114
 server=/orihard.com/114.114.114.114
 server=/oriphant.com/114.114.114.114
