accelerated-domains: add beijingbio.tech

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13978,6 +13978,7 @@ server=/beijing120.com/114.114.114.114
 server=/beijing518.com/114.114.114.114
 server=/beijingbang.com/114.114.114.114
 server=/beijingbaomu.com/114.114.114.114
+server=/beijingbio.tech/114.114.114.114
 server=/beijingcenterforthearts.com/114.114.114.114
 server=/beijingfenxiangkeji.com/114.114.114.114
 server=/beijingfojiao.com/114.114.114.114
