--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15122,6 +15122,7 @@ server=/bjcomm.com/114.114.114.114
 server=/bjconrad.com/114.114.114.114
 server=/bjcontinent.com/114.114.114.114
 server=/bjcpjzhyxh.com/114.114.114.114
+server=/bjcrg.com/114.114.114.114
 server=/bjcsfx.com/114.114.114.114
 server=/bjcshy.com/114.114.114.114
 server=/bjcsyg.com/114.114.114.114
