accelerated-domains: add orientscape.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65427,6 +65427,7 @@ server=/orientfoods.net/114.114.114.114
 server=/orientgolf.com/114.114.114.114
 server=/orientpc.com/114.114.114.114
 server=/orientpowertech.com/114.114.114.114
+server=/orientscape.com/114.114.114.114
 server=/orienttextile.com/114.114.114.114
 server=/orienttumor.com/114.114.114.114
 server=/orientzj.com/114.114.114.114
