--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13728,6 +13728,7 @@ server=/bd-union.com/114.114.114.114
 server=/bd001.net/114.114.114.114
 server=/bd689.com/114.114.114.114
 server=/bd7kzs.site/114.114.114.114
+server=/bdaenviro.com/114.114.114.114
 server=/bdall.com/114.114.114.114
 server=/bdaor.com/114.114.114.114
 server=/bdapark.com/114.114.114.114
