accelerated-domains: add chinayuns.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20314,6 +20314,7 @@ server=/chinays.com/114.114.114.114
 server=/chinayuanwang.com/114.114.114.114
 server=/chinayulin.com/114.114.114.114
 server=/chinayunlang.com/114.114.114.114
+server=/chinayuns.com/114.114.114.114
 server=/chinayyjx.com/114.114.114.114
 server=/chinayyo.com/114.114.114.114
 server=/chinaz.com/114.114.114.114
