accelerated-domains: add hqyl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42673,6 +42673,7 @@ server=/hqygyg.com/114.114.114.114
 server=/hqyj.com/114.114.114.114
 server=/hqyjng.com/114.114.114.114
 server=/hqyjsuccess.com/114.114.114.114
+server=/hqyl.com/114.114.114.114
 server=/hqys.net/114.114.114.114
 server=/hqytgyh.com/114.114.114.114
 server=/hqyun.com/114.114.114.114
